Fix overflow for fish detail

--- a/src/components/FishDetail/fishDetail.scss
+++ b/src/components/FishDetail/fishDetail.scss
@@ -1,6 +1,8 @@
 
 .fish-detail {
-    &__list-item {
+
+
+    &__slide-list {
         list-style: none;
     }
 }
